--- a/developerСonsole.css
+++ b/developerСonsole.css
@@ -11,3 +11,8 @@
   height: 100%;
   z-index: 1000; /* Ensure it is above other elements */
 }
+
+.form-attach__image,
+.screenshots-table__image {
+  cursor: zoom-in;
+}
